Bug 464640 - Typing in navigation bar dropdown then pressing enter does not select first item
Summary: Typing in navigation bar dropdown then pressing enter does not select first item
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 22.12.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-22 10:38 UTC by Kishore Gopalakrishnan
Modified: 2023-02-26 10:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2023-01-22 10:38:12 UTC
SUMMARY
Clicking on an item in the breadcrumbs/navigation bar (the one under the tabbar that shows the path to the current file as a set of clickable levels) shows a dropdown in which we can type to filter. In this dropdown, typing and then just pressing 'enter' does not select the first shown item in the dropdown.

STEPS TO REPRODUCE
1. Enable 'Settings > show navigation bar'
2. Click an item in the navigation bar
3. Type to filter
4. Press 'enter'

OBSERVED RESULT
The seach box disappears, but the list is still shown in its filtered state. To select an item, you have to press the down arrow before pressing enter.

EXPECTED RESULT
The first item in the filtered list should've been opened after the user pressed enter.

SOFTWARE/OS VERSIONS
kate 22.12.1
Operating System: Arch Linux 
KDE Plasma Version: 5.26.90
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8
Kernel Version: 6.1.7-arch1-1 (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
Comment 1 Waqar Ahmed 2023-01-22 14:27:58 UTC
Git commit d6312bed14ccb60ae2fe48ccb6a3d61f554300d1 by Waqar Ahmed.
Committed on 22/01/2023 at 13:45.
Pushed by waqar into branch 'master'.

Fix urlbar doesn't select first item on filtering

M  +6    -0    apps/lib/kateurlbar.cpp

https://invent.kde.org/utilities/kate/commit/d6312bed14ccb60ae2fe48ccb6a3d61f554300d1
Comment 2 Waqar Ahmed 2023-02-26 10:49:39 UTC
Git commit 479b41545c1729bd5796dc0bb12690cb24ba3749 by Waqar Ahmed.
Committed on 26/02/2023 at 10:42.
Pushed by waqar into branch 'release/22.12'.

Fix urlbar doesn't select first item on filtering

M  +6    -0    apps/lib/kateurlbar.cpp

https://invent.kde.org/utilities/kate/commit/479b41545c1729bd5796dc0bb12690cb24ba3749