Fix urlbar doesn't select first item on filtering

BUG: 464640